welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:9: error: not found: value liMessage
for (i<- 0 to lar) { var dec = 0;gauche();avance();droite();dec = liMessage().toInt;
                                                                  ^Array2:10: error: not found: value haut
for (h<- 0 to haut) { setCouleurBrosse(tab((h + dec) % hauteur)); baisseBrosse();leveBrosse();avance()}
              ^