welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
var hauteur = getMondeHauteur();
var hau = hauteur -1;
var largeur = getMondeLargeur();
var lar = largeur-2;
var tab = new Array[Color] (hauteur)

for (i<- 0 to lar) { var dec = 0;gauche();avance();droite();dec = liMessage().toInt;
for (h<- 0 to haut) { setCouleurBrosse(tab((h + dec) % hauteur)); baisseBrosse();leveBrosse();avance()}
recule(hauteur)}



}
